--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 
             </div>
             <div class="modal-footer" onclick="closeCardModal">
-                <button class="btn-gen">Comprar mi amor</h2>
+                <button class="btn-gen" id="buy-button">Comprar mi amor</h2>
             </div>
         </div>
     </div>
